Prevent photo stretching. Make photos appear in their original proportions

--- a/food-recipe-manager/src/AddRecipePage.css
+++ b/food-recipe-manager/src/AddRecipePage.css
@@ -52,9 +52,6 @@
 
 .addRecipePagePhoto {
     width: 100%;
-    max-width: 400px;
-    height: 100%;
-    max-height: 400px;
     cursor: pointer;
 }
 
