--- a/food-recipe-manager/src/RecipeDetailsPage.css
+++ b/food-recipe-manager/src/RecipeDetailsPage.css
@@ -61,9 +61,6 @@
 
 .recipeDetailsPagePhoto {
     width: 100%;
-    max-width: 400px;
-    height: 100%;
-    max-height: 400px;
     cursor: pointer;
 }
 
